@@ -77,11 +77,6 @@
 =sci-libs/openfoam-wmake-1.4.1*
 =sci-libs/openfoam-1.4.1*
 
-# Thomas Anderson (gentoofan23) <gentoofan23@gmail.com> (26 Mar 2008)
-# Masking kde-misc/kgrubeditor because it depends on kde-base/kdelibs-4*
-# which is package.mask'ed in gentoo-x86
-kde-misc/kgrubeditor
-
 # Juan Aguado <juantxorena@gmail.com> (16 Mar 2008)
 # Masking SVN ebuild
 =media-video/aegisub-9999
